fix(ux): improve usability on mobile

--- a/analysis-web/src/app/app.component.scss
+++ b/analysis-web/src/app/app.component.scss
@@ -2,11 +2,18 @@
 
 .analysis-app {
 	height: 100%;
-	overflow-y: auto;
+	width: 100%;
+	overflow: hidden;
 	background-color: #c0d3f1;
-	padding: 32 * $dim-1px;
 
-	&__header {
+	&__scroll-container {
+		overflow: auto;
+
+		padding: 32 * $dim-1px;
+	}
+
+	&__description {
+		width: 700 * $dim-1px;
 	}
 
 	&__header-title {
@@ -15,23 +22,38 @@
 	}
 
 	&__section {
+		margin-top: 48 * $dim-1px;
+		width: 1000 * $dim-1px;
 	}
 
 	&__section-title {
 		font-weight: 700;
 		font-size: 16 * $dim-1px;
-		width: 260 * $dim-1px;
+		width: 256 * $dim-1px;
 	}
 
 	&__section-header-lvl {
-		width: 100 * $dim-1px;
+		width: 104 * $dim-1px;
 	}
 
 	&__section-header-cards {
+		width: 128 * $dim-1px;
+	}
+
+	&__section-header-boost {
+		width: (104 - 40) * $dim-1px;
+	}
+
+	&__section-header-cost {
+		width: (128 - 40) * $dim-1px;
 	}
 
 	&__sort-checkbox {
 		margin-left: 24 * $dim-1px;
+	}
+
+	&__rank-section {
+		width: 1000 * $dim-1px;
 	}
 
 	&__rank-field {
